CSS positions & z-index corrected

--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,5 @@
   top: 0;
   bottom: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 0;
 }
